--- a/app/globals.css
+++ b/app/globals.css
@@ -9,3 +9,9 @@ body {
     width: 100vw;
     height: 100vh;
 }
+
+@theme {
+    --color-rose-gold: #e1a4a9;
+    --color-yellow-gold: #e6ca97;
+    --color-white-gold: #d9d9d9;
+}
