--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,10 @@ body {
     height: 100vh;
 }
 
+.swiper-slide {
+    width: auto !important;
+}
+
 @theme {
     --color-rose-gold: #e1a4a9;
     --color-yellow-gold: #e6ca97;
