--- a/app/globals.css
+++ b/app/globals.css
@@ -18,4 +18,22 @@ body {
     --color-rose-gold: #e1a4a9;
     --color-yellow-gold: #e6ca97;
     --color-white-gold: #d9d9d9;
+    --font-header: Avenir;
+    --font-price: Montserrat-Regular;
+    --font-title: Monserrat-Medium;
+}
+
+@font-face {
+    font-family: "Avenir";
+    src: url("../public/Fonts/avenir/Avenir-Book.ttf");
+}
+
+@font-face {
+    font-family: "Montserrat-Regular";
+    src: url("../public/Fonts/montserat/Montserrat-Regular.ttf");
+}
+
+@font-face {
+    font-family: "Montserrat-Medium";
+    src: url("../public/Fonts/montserat/Montserrat-Medium.otf");
 }
